--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-sparklines": "^1.7.0",
